static/style.less
.answered {
	border: 1px solid @brand-success;
	color: @brand-success;
}

.unanswered {
	border: 1px solid @brand-warning;
	color: @brand-warning;
}

.unanswered, .answered {
	text-transform: uppercase;
	font-size: 10px;
	padding: 2px 5px;
	vertical-align: 12%;
	font-weight: 700;

	i {
		vertical-align: 11%;
	}
}

.breadcrumb {
	.answered, .unanswered {
		display: none;
	}
}

html .topic {
	.answered {
		color: @brand-success;
	}

	.unanswered {
		color: @brand-warning;
	}

	.answered, .unanswered {
		padding: 2px 8px;
		vertical-align: 5%;
	}
}

.posts [component="post"][data-index="-1"].isSolved {
	border-left: 8px solid @brand-success;
	border-top: 1px solid @brand-success;
	border-bottom: 1px solid @brand-success;
	padding: 20px 20px 15px 20px;
	margin-bottom: 25px;
	margin-top: 0;
	margin-left: -28px;

	.necro-post {
		display: none;
	}

	@media (max-width: @screen-xs-max) {
		margin-left: -15px;
	}

	> hr {
		display: none;
	}

	.bookmarked:before {
		color: @brand-success;
		content: "\f00c";
	}
}

